# Oxide

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  build.yml  test.yml
obj_fbx_loader/: lib.rs  obj.rs
oxide_core/: Cargo.toml  lib.rs  matrix.rs  obj_fbx_loader.rs  quaternion.rs  test.rs  traits.rs  vector.rs  vector2.rs  vector3.rs
oxide_core/obj_fbx_loader/: mesh.rs  obj_loader.rs  test.rs  util.rs
oxide_core/obj_fbx_loader/test/: obj_loader.rs
oxide_core/test/: quaternion.rs  utils.rs  vector.rs  vector2.rs  vector3.rs
oxide_core/test/vector/: vector2.rs  vector3.rs  vector4.rs
oxide_core/vector/: test.rs  vector2.rs  vector3.rs  vector4.rs
oxide_editor/: Cargo.toml
oxide_editor/src/: app.rs  main.rs
oxide_editor/src/components/: viewport.rs
oxide_editor/src/model/: content_drawer.rs  test_content_drawer.rs
oxide_editor/src/models/: content_drawer.rs  filesystem.rs  mod.rs  test_content_drawer.rs  tests.rs
oxide_editor/src/models/tests/: filesystem.rs  mod.rs
oxide_editor/src/test/widgets/: content_drawer.rs
oxide_editor/src/viewmodels/: content_drawer.rs  mod.rs  tests.rs
oxide_editor/src/viewmodels/tests/: content_drawer.rs  mod.rs
oxide_editor/src/views/: content_drawer.rs  mod.rs
oxide_editor/src/widgets/: content_drawer.rs
oxide_file/: Cargo.toml  fbx.rs  lib.rs  util.rs
oxide_file/fbx/: lexer.rs  parser.rs  token.rs
oxide_file/test/fbx/: lexer.rs  parser.rs
oxide_file/testdata/: Cube.fbx
oxide_file/testdata/fbx/: Cube.hexyl  MalformedFileMagic.fbx  MalformedUnknownByte.fbx  ValidUnknownBytes.fbx
oxide_file/testdata/fbx/scripts/: constants.py  malfomredUnknownBytesFbx.py  validUnknownByteFbx.py  withoutVersionNumberFbx.py
oxide_math/: Cargo.toml  box2.rs  lib.rs  matrix.rs  matrix2x2.rs  quaternion.rs  test.rs  vector.rs  vector2.rs  vector3.rs  vector4.rs
oxide_math/commons/: matrix2x2.rs  mod.rs  quaternion.rs  vector.rs  vector2.rs  vector3.rs  vector4.rs
oxide_math/components/: circle.rs  cone.rs  cube.rs  cylinder.rs  mod.rs  position.rs  rect.rs  sphere.rs  velocity.rs
oxide_math/helpers/: mod.rs  rect_size_helpers.rs  rectsizehelpers.rs  size_helpers.rs
oxide_math/test/: circle.rs  cone.rs  cube.rs  cylinder.rs  matrix2x2.rs  quaternion.rs  rect.rs  sphere.rs  utils.rs  vector.rs  vector2.rs  vector3.rs  vector4.rs
oxide_math/test/vector/: vector2.rs  vector4.rs
oxide_math/vector/: vector3.rs  vector4.rs
oxide_physics/: Cargo.toml
oxide_physics/src/: aabb.rs  aabb_ball.rs  aabb_cuboid.rs  bounding_volume.rs  collide_broad_phase.rs  collision_world.rs  lib.rs  particle.rs  pfgen.rs  shape.rs
oxide_render/: Cargo.toml
src/: Cargo.toml  lib.rs
