[workspace]
members = [ "oxide_*" ]

[workspace.package]
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Changseo Jang <beleap@beleap.dev>",
    "Yongwook Choi <hyperflow@kakao.com>",
    "Chaneun Yeo <yce1014@naver.com>",
    "Seokwon Moon <artichoke42@naver.com>",
    "Oxide Engine"
]
version = "0.0.1"
edition = "2021"
description = "A cross-platform game engine written in Rust"
keywords = [ "game", "engine", "oxide" ]
categories = ["game-engines"]

repository = "https://github.com/OxideEngine/Oxide"

readme = "README.md"
license = "MIT"

