[package]
name = "oxide_core"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Changseo Jang <beleap@beleap.codes>",
    "Yongwook Choi <hyperflow@kakao.com>",
    "Chaneun Yeo <yce1014@naver.com>",
    "Seokwon Moon <artichoke42@naver.com>",
    "Oxide Engine"
]
edition = "2018"
description = "Oxide core"

repository = "https://github.com/OxideEngine/Oxide"

license = "MIT"

[lib]
name = "oxide_core"
path = "lib.rs"

[dependencies]
