[package]
name = "oxide_math"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Changseo Jang <changseo_jang@korea.ac.kr>",
    "Yongwook Choi <hyperflow@kakao.com>",
    "Chaneun Yeo <yce1014@naver.com>",
    "Oxide Engine"
]
edition = "2018"
description = "Math library for Oxide"

repository = "https://github.com/OxideEngine/Oxide"

license = "MIT"

[lib]
name = "oxide_math"
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
