[package]
name = "oxide_math"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Changseo Jang <beleap@beleap.codes>",
    "Yongwook Choi <hyperflow@kakao.com>",
    "Chaneun Yeo <yce1014@naver.com>",
    "Seokwon Moon <artichoke42@naver.com>",
    "Oxide Engine"
]
edition = "2021"
description = "Math library for Oxide"

repository = "https://github.com/OxideEngine/Oxide"

license = "MIT"

[lib]
name = "oxide_math"
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
legion = "0.4.0"
