[package]
name = "oxide_math"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Math library for Oxide"

[lib]
name = "oxide_math"
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
legion = "0.4.0"
