[package]
name = "oxide_render"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Changseo Jang <beleap@beleap.codes>",
    "Yongwook Choi <hyperflow@kakao.com>",
    "Chaneun Yeo <yce1014@naver.com>",
    "Seokwon Moon <artichoke42@naver.com>",
    "Oxide Engine"
]
edition = "2018"
description = "Rendering library for Oxide"

repository = "https://github.com/OxideEngine/Oxide"

license = "MIT"

[lib]
name = "oxide_render"
path = "lib.rs"

[dependencies]
