[package]
name = "oxide"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>", "Changseo Jang <changseo_jang@korea.ac.kr>", "Yongwook Choi <hyperflow@kakao.com>"]
description = "A cross-platform game engine written in Rust."
repository = "https://github.com/utilforever/Oxide"
readme = "README.md"
keywords = [ "game engine" ]
license = "MIT"
edition = "2018"

[lib]
name = "oxide"
path = "lib.rs"

[dependencies]